--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/amigoscode
+spring.datasource.url=jdbc:postgresql://localhost:5432/jpadb
 spring.datasource.username=
-spring.datasource.password=
+spring.datasource.password=1926
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
